fix: horizontal scroll issue, slight improvements to styling, fixed not logged in dashboard showing loading screen

--- a/src/Components/BottomNav/bottomnav.module.scss
+++ b/src/Components/BottomNav/bottomnav.module.scss
@@ -3,7 +3,7 @@
 .bottomNavigation {
   background-color: darken($echo-player, 2);
   height: 51px;
-  width: 100vw;
+  width: 100%;
   border-top: 1px solid darken($echo-player, 5);
 
   display: grid;
@@ -11,6 +11,8 @@
   //justify-content: space-around;
   align-items: center;
   text-transform: uppercase;
+  padding: 0;
+  margin: 0;
 }
 
 .item {
