--- a/src/Components/Player/player.module.scss
+++ b/src/Components/Player/player.module.scss
@@ -10,7 +10,7 @@
 
 .player {
   margin-top: auto;
-  width: 100vw;
+  width: 100%;
   background-color: $echo-player;
   border: 1px solid darken($echo-player, 3);
   border-radius: 0.5rem;
